fix scrollbar

--- a/paul-allen.css
+++ b/paul-allen.css
@@ -3,11 +3,13 @@ h1 {
 }
 
 body {
+  background: url('wave2.gif') top right no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  color: white;
   font-family: 'EB Garamond', 'Baskerville', "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
   font-size: 1.5rem;
-  color: white;
-  background: url('wave2.gif') no-repeat center center fixed;
-  background-size: cover;
+  overflow-x: hidden;
   text-transform: uppercase;
 }
 
